--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="./assets/frame.png" width="580px" class="changeImage">   
+        <img src="./assets/frame.png" width="100%" class="changeImage">   
         <div class="result-overlay">
             <div>
                 <h1 id="cronometro"><span>00:00:00</span></h1>
