--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <title>Cronômetro</title>
 </head>
@@ -21,8 +21,6 @@
     <br>
     <button onclick="stop()" id="stopButton">Stop</button>
     
+    <script src="./scripts.js"></script>
 </body>
-
-<script src="./scripts.js"></script>
-
 </html>
