--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <title>Cronômetro</title>
 </head>
 <body>
-    <div class="image-container">
-        <img src="./assets/frame.png" width="100%" class="changeImage">   
-        <div class="result-overlay">
-            <div>
-                <h1 id="cronometro"><span>00:00:00</span></h1>
+    <div class="container">
+        <div class="image-container">
+            <img src="./assets/frame.png" width="100%" class="changeImage">   
+            <div class="result-overlay">
+                <div>
+                    <h1 id="cronometro"><span>00:00:00</span></h1>
+                </div>
             </div>
         </div>
-    </div>
 
-    <button onclick="start()" >Start</button>
-    <br>
-    <br>
-    <button onclick="stop()" id="stopButton">Stop</button>
+        <div class="buttons-container">
+            <button onclick="start()" >Start</button>
+            <br>
+            <br>
+            <button onclick="stop()" id="stopButton">Stop</button>
+        </div>
+    </div>
     
     <script src="./scripts.js"></script>
 </body>
